# CppBasics

./: .gitignore  CMakeLists.txt  Class.cpp  Class.h  Concepts.cpp  Concepts.h  DynamicArray.cpp  DynamicArray.h  Logfile.txt  Preprocessor.h  ReadMe.md  Templates.h  Textfile.txt  main.cpp
src/: CMakeLists.txt  Concepts.cpp  Concepts.h  Container.cpp  Container.h  Preprocessor.h  SuperclassA.cpp  main.cpp
src/00_Deprecated/: 00_LinkedList.h  ArrayTestsOld.cpp  LinkedListTestsOld.cpp  Other.cpp
src/01_General/: Concepts.cpp  GeneralConcepts.h  Preprocessor.cpp  SuperclassA.h  Templates.h  g00_Struct.h  g01_Class.h  g02_Templates.h  g03_Const.h  g04_Binary.h  main.cpp
src/02_Specific/: SpecificConcepts.h  s01_Pointer.cpp  s01_Pointer.h  s02_VirtualFunctions.h  s03_PureVirtualFunctions.h  s04_OperatorOverloading.h  s05_StackVsHeap.cpp  s05_StackVsHeap.h
src/03_DataStructures/: 00_DynamicArray.cpp  00_LinkedList.cpp  00_OrderedArray.cpp  00_OrderedArray.h  DataStructures.h  DynamicArray.h  LinkedList.cpp  LinkedList.h  OrderedArray.cpp  OrderedArray.h  STLContainers.h  ds01_OrderedArray.h  ds01_UnorderedArray.h  ds02_DoubleLinkedList.h  ds03_LLStack.h  ds03_UAStack.h  ds04_Dequeue.h  ds04_Queue.h  ds05_HashTable.h  ds05_LLHashTable.h  ds06_BST.h  ds06_Tree.h
src/04_Algorithms/: Algorithms.h  STLAlgorithms.h  Search.cpp  Search.h  Sort.h
src/05_Bonus/: Array.h  Backtracking.h  Binary.h  Bonus.h  Design.h  DynamicProgramming.h  Graph.h  LArray.h  LinkedList.h  Math.h  Matrix.h  MyQueue.h  Queue.h  String.h  Tree.h  TwoPointers.h
testing/: CMakeLists.txt  LinkedListTests.cpp  OrderedArrayTests.cpp  b01_TwoPointerTests.cpp  b02_StringTests.cpp  b03_ArrayTests.cpp  b03_LArrayTests.cpp  b04_DynamicProgramming.cpp  b04_DynamicProgrammingTests.cpp  b05_LinkedListTests.cpp  b06_TreeTests.cpp  b07_MatrixTests.cpp  b08_DesignTests.cpp  b08_QueueTests.cpp  b09_Math.cpp  b10_Backtracking.cpp  b11_BinaryTests.cpp  b12_GraphTests.cpp  t01_OrderedArrayTests.cpp  t01_UnorderedArrayTests.cpp  t02_LinkedListTests.cpp  t03_StackTests.cpp  t04_DequeueTests.cpp  t04_QueueTests.cpp  t05_HashTableTests.cpp  t06_TreeTests.cpp  ta01_SearchTests.cpp  ta02_SortTests.cpp
